# ChangeLog for mail-client/sylpheed
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/sylpheed/ChangeLog,v 1.100 2005/04/14 13:07:50 hattya Exp $

*sylpheed-1.9.8 (14 Apr 2005)

  14 Apr 2005; Akinori Hattori <hattya@gentoo.org> +sylpheed-1.9.8.ebuild:
  new upstream release (development branch), fixes bug #88842.

  31 Mar 2005; Akinori Hattori <hattya@gentoo.org>
  -files/sylpheed-1.9.2-references.diff, -sylpheed-1.9.5.ebuild,
  -sylpheed-1.9.6.ebuild:
  remove old ebuilds.

*sylpheed-1.9.7 (31 Mar 2005)

  31 Mar 2005; Akinori Hattori <hattya@gentoo.org> +sylpheed-1.9.7.ebuild:
  new upstream release (development branch). fixes bug #87225.

  31 Mar 2005; Akinori Hattori <hattya@gentoo.org> sylpheed-1.0.4.ebuild:
  stable on ia64. fixes bug #86541.

  30 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org> sylpheed-1.0.4.ebuild:
  Stable on sparc wrt #86541

  30 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org> sylpheed-1.0.4.ebuild:
  stable on amd64 wrt security bug #86541

  30 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> sylpheed-1.0.4.ebuild:
  Stable on alpha, bug 86541.

  29 Mar 2005; Michael Hanselmann <hansmi@gentoo.org> sylpheed-1.0.4.ebuild:
  Stable on hppa.

  29 Mar 2005; Michael Hanselmann <hansmi@gentoo.org> sylpheed-1.0.4.ebuild:
  Stable on ppc.

  29 Mar 2005; Markus Rothe <corsair@gentoo.org> sylpheed-1.0.4.ebuild:
  Stable on ppc64; bug #86541

*sylpheed-1.0.4 (29 Mar 2005)

  29 Mar 2005; Fernando J. Pereda <ferdy@gentoo.org> +sylpheed-1.0.4.ebuild:
  Security bump wrt #86541

*sylpheed-1.9.6 (21 Mar 2005)

  21 Mar 2005; Akinori Hattori <hattya@gentoo.org> +sylpheed-1.9.6.ebuild:
  new upstream release (development branch).

  21 Mar 2005; Akinori Hattori <hattya@gentoo.org> -sylpheed-0.9.12-r3.ebuild,
  -sylpheed-0.9.99.ebuild, -sylpheed-1.0.0.ebuild, -sylpheed-1.0.1.ebuild,
  -sylpheed-1.0.2.ebuild: