@@ -1,12 +1,8 @@
-MD5 b1c49b4c6b4d9f9b87ee18eb7e3c18fc ChangeLog 22357
+MD5 5a8c4b81a0666ca0627f2aeb3046d1b1 ChangeLog 22481
 MD5 126ca8f672f0296d2f1e6830e6729a91 metadata.xml 231
-MD5 79126d7061a31b9aa5c2b0663137a57c sylpheed-1.0.3.ebuild 1610
 MD5 b24edf1dd3b5d0347d0798e571c9bb87 sylpheed-1.0.4.ebuild 1610
-MD5 76ff1180f253663c71b719a03e9eddcc sylpheed-1.9.7.ebuild 1485
 MD5 763f67f39387c0aeedeeb9c2efcaa935 sylpheed-1.9.8.ebuild 1485
-MD5 cdbd74d02e21e89ef0a94ee91dbab75c files/digest-sylpheed-1.0.3 68
 MD5 a362fe1639f77a7898dfeab021cf9ca2 files/digest-sylpheed-1.0.4 68
-MD5 c32e55c4438d6725d6ed2fe2ef2f5800 files/digest-sylpheed-1.9.7 68
 MD5 e826f34c767690602e7e053c3e8b5bb3 files/digest-sylpheed-1.9.8 68
 MD5 4cbec71671b7349c904f860a12fee5d9 files/sylpheed-namespace.diff 550
 MD5 f4242298cfab21456442bfe52505d2b8 files/sylpheed-procmime.diff 1119
