@@ -1,1 +1,0 @@
-MD5 9e2733a0ea903c3fb29f537b67a6f15a sylpheed-1.0.3.tar.bz2 2376892
