@@ -1,1 +1,0 @@
-MD5 ef5ddd410cf19007a502f44274bee04c sylpheed-1.9.7.tar.bz2 2219760
